# QtPhi

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/base/: base.h  concepts.h  errors.cpp  errors.h
src/base/coordinates/: basegrid.h  basegrid.txx  coordinate.cpp  coordinate.h  coordinate.txx  grid.h  rect.cpp  rect.h  rect.txx
src/base/functions/: functions.cpp  functions.h
src/base/geometry/: basegrid.h  basegrid.txx  coordinate.cpp  coordinate.h  coordinate.txx  grid.h  imposablegrid.cpp  imposablegrid.h  imposablegrid.txx  pixelrectiterator.cpp  pixelrectiterator.h  rect.cpp  rect.h  rect.txx  rectiterator.cpp  rectiterator.h
src/base/grid/: basegrid.cpp  basegrid.h  basegrid.txx  grid.cpp  grid.h  gridimpl.cpp  gridimpl.h  imposablegrid.cpp  imposablegrid.h  imposablegrid.txx
src/base/interpolation/: interpolation.cpp  interpolation.h
src/physics/: gridfactory.cpp  gridfactory.h  physics.h
src/physics/potential/: potentialgrid.cpp  potentialgrid.h
src/ui/: mainwindow.cpp  mainwindow.h
src/ui/colormap/: colormap.h  lerpcolormap.cpp  lerpcolormap.h
src/ui/widgets/: colormap.cpp  colormap.h  colormaplegend.cpp  colormaplegend.h  gridsview.cpp  gridsview.h
unittest/: assertFailToCompile.cpp  unittest_main.cpp
unittest/base/: basegridtest.cpp  basegridtest.h  coordinatetest.cpp  coordinatetest.h  gridtest.cpp  gridtest.h  imposablegridtest.cpp  imposablegridtest.h  interpolationtest.cpp  interpolationtest.h  recttest.cpp  recttest.h  test_bar.cpp  test_bar.h  test_test.cpp  test_test.h
